# zs-retriever

./: .gitignore  README.md
backend/: pyproject.toml
backend/scripts/: test_embedding.py  test_rerank.py
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/api/: deps.py  router.py
backend/src/app/api/v1/: indexes.py  jobs.py  projects.py  search.py
backend/src/app/core/: __init__.py  exceptions.py  logging.py  tracing.py
backend/src/app/db/: __init__.py  models.py  session.py
backend/src/app/schemas/: document.py  job.py  search.py
backend/src/app/services/indexing/: __init__.py  job_runner.py
backend/src/app/services/indexing/chunking/: __init__.py  base.py  hybrid.py  semantic.py  structure_fixed.py
backend/src/app/services/ingestion/: __init__.py  image_pipeline.py  orchestrator.py
backend/src/app/services/parsing/: __init__.py  base.py  docx_parser.py  pdf_parser.py  pptx_parser.py
backend/src/app/services/providers/: __init__.py  base.py  embedding_openai.py  embedding_qwen.py  embedding_qwen_api.py  embedding_stub.py  ocr_stub.py  registry.py  rerank_cross_encoder.py  rerank_openai.py  rerank_qwen_api.py  rerank_stub.py  vector_store_default.py  vision_qwen_vl.py  vision_stub.py
backend/src/app/services/retrieval/: __init__.py  search.py
backend/tests/: conftest.py  test_chunking.py  test_idempotency.py  test_parsing.py  test_retrieval.py
playground_ui/: app.py
playground_ui/pages/: 1_Upload.py  2_Search.py
